fix namespacing for requested resources

--- a/index.scss
+++ b/index.scss
@@ -8,5 +8,5 @@
   --background-color: #051c2c;
   --primary-font-family:  monospace;
   --secondary-font-family: sans-serif;
-  --logo-path: url(/pages/op-themeing/active/logo.png);
+  --logo-path: url(/pages/op-plugin-theming/active/logo.png);
 }
